@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package com.bookstore {
      package com.bookstore.controller {
        class CheckoutController {
            - mailSender : JavaMailSender
            + checkout()
            + checkoutPost()
            + setShippingAddress()
            + setPaymentMethod()
        }
      }
    }
  }
  

  package  {
    package com.bookstore {
      package com.bookstore.controller {
        class HomeController {
            - mailSender : JavaMailSender
            + index()
            + login()
            + bookshelf()
            + bookDetail()
            + forgetPassword()
            + myProfile()
            + listOfCreditCards()
            + listOfShippingAddresses()
            + addNewCreditCard()
            + addNewShippingAddress()
            + addNewShippingAddress()
            + updateUserShipping()
            + setDefaultShippingAddress()
            + removeUserShipping()
            + addNewCreditCard()
            + updateCreditCard()
            + removeCreditCard()
            + setDefaultPayment()
            + newUserPost()
            + newUser()
            + updateUserInfo()
        }
      }
    }
  }
  

  package  {
    package com.bookstore {
      package com.bookstore.controller {
        class ShoppingCartController {
            + cart()
            + addItem()
            + updateCartItem()
            + removeItem()
        }
      }
    }
  }
  

  CheckoutController o-- ShippingAddress : shippingAddress
  CheckoutController o-- BillingAddress : billingAddress
  CheckoutController o-- Payment : payment
  CheckoutController o-- MailConstructor : mailConstructor
  CheckoutController o-- UserService : userService
  CheckoutController o-- CartItemService : cartItemService
  CheckoutController o-- ShoppingCartService : shoppingCartService
  CheckoutController o-- ShippingAddressService : shippingAddressService
  CheckoutController o-- BillingAddressService : billingAddressService
  CheckoutController o-- PaymentService : paymentService
  CheckoutController o-- UserShippingService : userShippingService
  CheckoutController o-- UserPaymentService : userPaymentService
  CheckoutController o-- OrderService : orderService
  HomeController o-- MailConstructor : mailConstructor
  HomeController o-- UserService : userService
  HomeController o-- UserSecurityService : userSecurityService
  HomeController o-- BookService : bookService
  HomeController o-- UserPaymentService : userPaymentService
  HomeController o-- UserShippingService : userShippingService
  ShoppingCartController o-- UserService : userService
  ShoppingCartController o-- CartItemService : cartItemService
  ShoppingCartController o-- ShoppingCartService : shoppingCartService
  ShoppingCartController o-- BookService : bookService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
